--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "craco.config.js",
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "abab": "^2.0.6",
     "accepts": "^1.3.8",
     "acorn": "^8.12.1",
