--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "farcite-merged",
   "version": "1.0.0",
   "description": "",
-  "main": "craco.config.js",
+  "main": "tailwind.config.js",
   "dependencies": {
-    "@craco/craco": "^7.1.0",
     "abab": "^2.0.6",
     "accepts": "^1.3.8",
     "acorn": "^8.12.1",
