--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "shadcn": "shadcn-ui"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@types/react": "^18.3.4",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5"
